Minor change to index.html – Changed from Name to Resource Name

--- a/rms-deployment.yaml
+++ b/rms-deployment.yaml
@@ -14,6 +14,6 @@ spec: # defines the desired state of the Deployment.
     spec: # specifies the container(s) to run
       containers:
       - name: rms-container
-        image: zhong1408/rms-docker-img:latest
+        image: zhong1408/rms-docker-img:v2
         ports:
         - containerPort: 5050 # specifies the port that the application listens on
