--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile 
-    image: zhong1408/rms-docker-img:latest
+    image: zhong1408/rms-docker-img:v2
     container_name: rms-docker-container
     ports:
       - "8000:5050" 
